[package]
name = "assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
gif = "0.13.1"
mlua = { version = "0.10.3", features = ["luau"] }
raw-window-handle = "0.6.2"
sdl3 = { version = "0.14.27", features = ["build-from-source-static", "raw-window-handle"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
